MCR-2997 NPathComplexity